Fix scroll behavior on Safari

--- a/src/App.css
+++ b/src/App.css
@@ -195,11 +195,9 @@ a {
   }
 }
 
-#current-location {
-  position: relative;
-}
-
-#forecast {
+#current-location,
+#forecast,
+#search {
   position: relative;
 }
 
